--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ssh_ui = "0.3"
+ssh_ui = "0.3.1"
 anyhow = "1.0.68"
 html2text = "0.4.5"
 lazy_static = "1.4.0"
 tantivy = "0.19.1"
 tokio = { version = "1", features = ["full"] }
 zim = "0.4.0"
+thiserror = "1.0.38"
