--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ssh_ui = "0.3.1"
+ssh_ui = "0.4.0"
 anyhow = "1.0.68"
 html2text = "0.4.5"
 lazy_static = "1.4.0"
@@ -12,3 +12,4 @@ tantivy = "0.19.1"
 tokio = { version = "1", features = ["full"] }
 zim = "0.4.0"
 thiserror = "1.0.38"
+env_logger = "0.10.0"
